@@ -1,111 +1,98 @@
 package az.edu.ada.wm2.lab6.service;
 
-import az.edu.ada.wm2.lab6.model.Product;
 import az.edu.ada.wm2.lab6.model.Category;
+import az.edu.ada.wm2.lab6.model.Product;
 import az.edu.ada.wm2.lab6.model.dto.ProductRequestDto;
 import az.edu.ada.wm2.lab6.model.dto.ProductResponseDto;
-import az.edu.ada.wm2.lab6.repository.ProductRepository;
+import az.edu.ada.wm2.lab6.model.mapper.ProductMapper;
 import az.edu.ada.wm2.lab6.repository.CategoryRepository;
-import lombok.RequiredArgsConstructor;
+import az.edu.ada.wm2.lab6.repository.ProductRepository;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.UUID;
 
 @Service
-@RequiredArgsConstructor
 public class ProductServiceImpl implements ProductService {
 
     private final ProductRepository productRepository;
     private final CategoryRepository categoryRepository;
+    private final ProductMapper productMapper;
+
+    @Autowired
+    public ProductServiceImpl(ProductRepository productRepository,
+                               CategoryRepository categoryRepository,
+                               ProductMapper productMapper) {
+        this.productRepository = productRepository;
+        this.categoryRepository = categoryRepository;
+        this.productMapper = productMapper;
+    }
 
     @Override
     public ProductResponseDto createProduct(ProductRequestDto dto) {
-        Product product = new Product();
-        product.setProductName(dto.getProductName());
-        product.setPrice(dto.getPrice());
-        product.setExpirationDate(dto.getExpirationDate());
-
-        if (dto.getCategoryIds() != null) {
-            Set<Category> categories = new HashSet<>(categoryRepository.findAllById(dto.getCategoryIds()));
-            product.setCategories(categories);
+        if (dto.getPrice() == null || dto.getPrice().compareTo(BigDecimal.ZERO) <= 0) {
+            throw new IllegalArgumentException("Price must be greater than zero");
         }
-
-        Product saved = productRepository.save(product);
-        return mapToDto(saved);
+        Product product = productMapper.toEntity(dto);
+        if (dto.getCategoryIds() != null && !dto.getCategoryIds().isEmpty()) {
+            List<Category> categories = categoryRepository.findAllById(dto.getCategoryIds());
+            if (product.getCategories() == null) {
+                product.setCategories(new ArrayList<>());
+            }
+            product.getCategories().addAll(categories);
+        }
+        return productMapper.toResponseDto(productRepository.save(product));
     }
 
     @Override
     public ProductResponseDto getProductById(UUID id) {
         Product product = productRepository.findById(id)
-                .orElseThrow(() -> new NoSuchElementException("Product not found with id: " + id));
-        return mapToDto(product);
+                .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
+        return productMapper.toResponseDto(product);
     }
 
     @Override
     public List<ProductResponseDto> getAllProducts() {
         return productRepository.findAll().stream()
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
+                .map(productMapper::toResponseDto)
+                .toList();
     }
 
     @Override
     public ProductResponseDto updateProduct(UUID id, ProductRequestDto dto) {
+        if (dto.getPrice() != null && dto.getPrice().compareTo(BigDecimal.ZERO) <= 0) {
+            throw new IllegalArgumentException("Price must be greater than zero");
+        }
         Product product = productRepository.findById(id)
-                .orElseThrow(() -> new NoSuchElementException("Product not found with id: " + id));
-
+                .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
         if (dto.getProductName() != null) product.setProductName(dto.getProductName());
         if (dto.getPrice() != null) product.setPrice(dto.getPrice());
         if (dto.getExpirationDate() != null) product.setExpirationDate(dto.getExpirationDate());
-
-        if (dto.getCategoryIds() != null) {
-            Set<Category> categories = new HashSet<>(categoryRepository.findAllById(dto.getCategoryIds()));
-            product.setCategories(categories);
-        }
-
-        Product updated = productRepository.save(product);
-        return mapToDto(updated);
+        return productMapper.toResponseDto(productRepository.save(product));
     }
 
     @Override
     public void deleteProduct(UUID id) {
-        if (!productRepository.existsById(id)) {
-            throw new NoSuchElementException("Product not found with id: " + id);
-        }
-        productRepository.deleteById(id);
+        Product product = productRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
+        productRepository.delete(product);
     }
 
     @Override
     public List<ProductResponseDto> getProductsExpiringBefore(LocalDate date) {
-        return productRepository.findAll().stream()
-                .filter(p -> p.getExpirationDate() != null && p.getExpirationDate().isBefore(date))
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
+        return productRepository.findByExpirationDateBefore(date).stream()
+                .map(productMapper::toResponseDto)
+                .toList();
     }
 
     @Override
     public List<ProductResponseDto> getProductsByPriceRange(BigDecimal minPrice, BigDecimal maxPrice) {
-        return productRepository.findAll().stream()
-                .filter(p -> p.getPrice().compareTo(minPrice) >= 0 && p.getPrice().compareTo(maxPrice) <= 0)
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
-    }
-
-    private ProductResponseDto mapToDto(Product product) {
-        ProductResponseDto dto = new ProductResponseDto();
-        dto.setId(product.getId());
-        dto.setProductName(product.getProductName());
-        dto.setPrice(product.getPrice());
-        dto.setExpirationDate(product.getExpirationDate());
-        if (product.getCategories() != null) {
-            dto.setCategoryNames(product.getCategories().stream()
-                    .map(Category::getName)
-                    .collect(Collectors.toList()));
-        } else {
-            dto.setCategoryNames(new ArrayList<>());
-        }
-        return dto; 
+        return productRepository.findByPriceBetween(minPrice, maxPrice).stream()
+                .map(productMapper::toResponseDto)
+                .toList();
     }
 }
